corrected missing background on showcase

--- a/Styles/main.scss
+++ b/Styles/main.scss
@@ -16,7 +16,7 @@
 
 #showcase {
     min-height: 800px;
-    background: url('/Images/filteredCheesecake.png');
+    background-image: url('/Users/student/Desktop/WebDevelopment/LandingPageWithBootstrap/Styles/filteredCheesecake.png');
     background-position: center;
     background-size: cover;
     text-align: center;
